--- a/_posts/2014-01-05-mixtape-2013.md
+++ b/_posts/2014-01-05-mixtape-2013.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: "Mixtape: 2013"
-category: mixtape
+category: music
 ---
 
 <iframe width="100%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/17883496&amp;color=ff6600&amp;auto_play=false&amp;show_artwork=true"></iframe>
