updated link to Luky's post

--- a/_posts/2013-08-15-px-vs-em.md
+++ b/_posts/2013-08-15-px-vs-em.md
@@ -31,7 +31,7 @@ So if you create a new responsive website, and you should always do so, do your 
 	<li><a href="ttps://medium.com/front-end-development/8f433689736f">Sizing (Web) components</a> by <a href="http://simurai.com/">Simurai</a></li>
     <li><a href="http://snook.ca/archives/html_and_css/font-size-with-rem">Font-size with rem</a> by <a href="http://snook.ca">Jonathan Snook</a></li>
     <li><a href="http://blog.cloudfour.com/the-ems-have-it-proportional-media-queries-ftw/">The ems have it: Proportional Media Queries FTW</a> by <a href="http://blog.cloudfour.com/author/lyza-gardner/">Lyza Gardner</a></li>
-    <li><a href="http://display-blog.com/em-vs-px/">em vs px</a> by <a href="http://lucasbonomi.com/">Lucas Bonomi</a></li>
+    <li><a href="http://codepen.io/LukyVj/blog/em-vs-px">em vs px</a> by <a href="http://lucasbonomi.com/">Lucas Bonomi</a></li>
 </ul>
 </div>
 
