--- a/_posts/2013-08-15-px-vs-em.md
+++ b/_posts/2013-08-15-px-vs-em.md
@@ -25,19 +25,10 @@ Another important point is that em Media Queries apply even if the user zooms th
 em is a lot better than pixel even if it takes some time to change your mind and work flow. It is *more flexible*, *more scalable* and - which is the most important, *completely responsive*.
 So if you create a new responsive website, and you should always do so, do your self a favor and use em instead of px.
 
-<div class="further-reading">
-<h3 class="further-reading--headline">Further Reading</h3>
-<ul class="further-reading--list">
-	<li><a href="ttps://medium.com/front-end-development/8f433689736f">Sizing (Web) components</a> by <a href="http://simurai.com/">Simurai</a></li>
-    <li><a href="http://snook.ca/archives/html_and_css/font-size-with-rem">Font-size with rem</a> by <a href="http://snook.ca">Jonathan Snook</a></li>
-    <li><a href="http://blog.cloudfour.com/the-ems-have-it-proportional-media-queries-ftw/">The ems have it: Proportional Media Queries FTW</a> by <a href="http://blog.cloudfour.com/author/lyza-gardner/">Lyza Gardner</a></li>
-    <li><a href="http://codepen.io/LukyVj/blog/em-vs-px">em vs px</a> by <a href="http://lucasbonomi.com/">Lucas Bonomi</a></li>
-</ul>
-</div>
+### Further Reading
 
-<div class="contributed-links">
-    <h3 class="contributed-links--headline">Contributed Links</h3>
-    <ul>
-        <li><a href="http://pxtoem.com/">px to em Converter</a> contributed by <a href="https://twitter.com/LukyVJ">Lucas Bonomi</a></li>
-    </ul>
-</div>
+More articles on this topic:
+- [Sizing (Web) components](https://medium.com/front-end-development/8f433689736f) by [Simurai](http://simurai.com/)
+- [Font-size with rem ](http://snook.ca/archives/html_and_css/font-size-with-rem) by [Jonathan Snook](http://snook.ca)
+- [The ems have it: Proportional Media Queries FTW](http://blog.cloudfour.com/the-ems-have-it-proportional-media-queries-ftw/) by [Lyza Gardner](http://blog.cloudfour.com/author/lyza-gardner/)
+- [em vs px](http://codepen.io/LukyVj/blog/em-vs-px) by [Lucas Bonomi](http://lucasbonomi.com/)
