--- a/_posts/2014-01-05-mixtape-2013.md
+++ b/_posts/2014-01-05-mixtape-2013.md
@@ -2,9 +2,10 @@
 layout: post
 title: "Mixtape: 2013"
 category: music
-tags: 
+tags:
     - music
     - mixtape
+    - soundcloud
 ---
 
 I like to make Mixtapes (or playlists) on SoundCloud and this one is my "Best of 2013" Mixtape featuring my favorites of Drum and Bass, Electro and Dubstep. Enjoy!
